# crew_j_te_employee_phone_dw_pytest

./: .gitignore  CLAUDE.md  README.md  databricks.yml  pyproject.toml  ruff.toml
.claude/: settings.json
.github/workflows/: ci-workflow.yml
framework/: __init__.py  common_utility.py  pipeline_runner.py
framework/readers/: __init__.py  source_reader.py
framework/utils/: __init__.py  config_manager.py  databricks_context.py  job_logger.py
framework/writers/: __init__.py  delta_writer.py
input/: CREW_J_TE_EMPLOYEE_PHONE_DW.xml
jobs/: README.md  __init__.py
output/: CREW_J_TE_EMPLOYEE_PHONE_DW_code_review_report.md  CREW_J_TE_EMPLOYEE_PHONE_DW_databricks_code_prompt.md  CREW_J_TE_EMPLOYEE_PHONE_DW_lineage.xlsx  CREW_J_TE_EMPLOYEE_PHONE_DW_lineage_diagram.md  CREW_J_TE_EMPLOYEE_PHONE_DW_validation_report.md  code_review_summary.md  discovery.json  generate_lineage.py  validate_and_fix.py
output/project/: DEPLOYMENT.md
output/project/jobs/crew_j_te_employee_phone_dw/: __init__.py  deploy_config.sql  run_pipeline.py  transformations.py
output/project/jobs/crew_j_te_employee_phone_dw/tests/: __init__.py  conftest.py  test_integration.py  test_transformations.py
output/project/jobs/crew_j_te_employee_phone_dw/tests/fixtures/: README.md  __init__.py  expected_outputs.py  synthetic_data.py
output/project/notebooks/crew_j_te_employee_phone_dw/: run_pipeline.py
output/project/tests/: __init__.py  conftest.py
output/project/tests/framework/: __init__.py  test_common_utility.py  test_dq_validator.py
prompts/: step0_prompt.md  step1_prompt.md  step1b_prompt.md  step2_prompt.md  step3_prompt.md  step3b_prompt.md  step4_prompt.md  step5_prompt.md
tests/: __init__.py  conftest.py
tests/framework/: __init__.py  test_dq_validator.py
